img width 101% and less text temp fix for white space after img

--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,7 @@ body {
     padding: 3rem 5rem; }
   .popup__img {
     display: block;
-    width: 100%; }
+    width: 101%; }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
