--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -32,7 +32,7 @@
 
   &__img {
     display: block;
-    width: 100%;
+    width: 101%;
   }
 
   &__text {
